--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
+    "node": "^0.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
