--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.15.2",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
+    "morgan": "^1.8.1",
     "node": "^0.0.0",
+    "nodejs": "^0.0.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "serve-favicon": "^2.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:server": "node server",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
