--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "morgan": "^1.8.1",
     "node": "^0.0.0",
