--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.6",
     "express": "^4.15.2",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
