--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "nodejs": "^0.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0",
     "serve-favicon": "^2.4.2"
   },
   "scripts": {
