--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.1.1",
+    "react-scripts": "0.9.5",
     "redux": "^3.6.0",
     "serve-favicon": "^2.4.2"
   },
