--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-router-dom": "^4.1.1",
     "react-scripts": "0.9.5",
     "redux": "^3.6.0",
+    "redux-logger": "^3.0.1",
+    "redux-thunk": "^2.2.0",
     "serve-favicon": "^2.4.2"
   },
   "scripts": {
