--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "auth0-js": "^8.9.3",
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
@@ -18,7 +19,7 @@
     "morgan": "^1.8.1",
     "node": "^0.0.0",
     "nodejs": "^0.0.0",
-    "react": "^15.4.2",
+    "react": "^15.5.0",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.1.1",
