--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node": "^0.0.0",
     "nodejs": "^0.0.0",
     "react": "^15.5.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.1.1",
