--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodejs": "^0.0.0",
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
+    "react-burger-menu": "^2.4.4",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.1.1",
