--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "enzyme": "^3.4.4",
     "enzyme-adapter-react-16": "^1.2.0",
     "react-scripts": "0.9.5",
-    "react-test-renderer": "^16.4.2"
+    "react-test-renderer": "^16.4.2",
+    "redux-observable": "^1.0.0",
+    "redux-tdd": "^1.1.0"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
@@ -29,7 +31,7 @@
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.1.1",
     "react-scripts": "0.9.5",
-    "redux": "^3.6.0",
+    "redux": "^4.0.0",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
     "serve-favicon": "^2.4.2"
