--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "enzyme-adapter-react-16": "^1.2.0",
     "react-scripts": "0.9.5",
     "react-test-renderer": "^16.4.2",
-    "redux-observable": "^1.0.0",
+    "redux-observable": "^1.0.0"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
