--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/runtime-corejs2": "^7.1.5",
     "babel-runtime": "^6.26.0",
     "enzyme": "^3.4.4",
     "enzyme-adapter-react-16": "^1.2.0",
@@ -24,7 +27,8 @@
     "node": "^0.0.0",
     "nodejs": "^0.0.0",
     "react": "^16.3.1",
-    "react-bootstrap": "^0.32.1",
+    "react-autocomplete": "^1.8.1",
+    "react-bootstrap": "^0.32.4",
     "react-burger-menu": "^2.4.4",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.3",
