--- a/package.json
+++ b/package.json
@@ -7,13 +7,10 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/runtime-corejs2": "^7.1.5",
     "babel-plugin-relay": "^1.7.0",
-    "babel-runtime": "^6.26.0",
     "enzyme": "^3.4.4",
     "enzyme-adapter-react-16": "^1.2.0",
     "graphql": "^14.0.2",
-    "react-scripts": "0.9.5",
     "react-test-renderer": "^16.4.2",
-    "redux-observable": "^1.0.0",
     "relay-compiler": "^1.7.0"
   },
   "dependencies": {
@@ -30,28 +27,42 @@
     "node": "^0.0.0",
     "nodejs": "^0.0.0",
     "react": "^16.6.3",
+    "react-app-rewired": "^1.6.2",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^0.32.4",
     "react-burger-menu": "^2.4.4",
     "react-dom": "^16.6.3",
-    "react-redux": "^5.0.3",
     "react-relay": "^1.7.0",
     "react-router-dom": "^4.1.1",
-    "react-scripts": "0.9.5",
+    "relay-runtime": "^1.7.0",
+    "react-scripts": "2.1.1",
     "redux": "^4.0.0",
+    "react-redux": "^5.0.3",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
     "serve-favicon": "^2.4.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "start:server": "node server",
-    "build": "react-scripts build",
+    "build": "react-app-rewired build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "relay": "relay-compiler --src ./src --schema ./schema.graphql --extensions js jsx"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>src/setupTests.js"
+  },
+  "browserslist": {
+    "development": [
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 edge versions"
+    ],
+    "production": [
+      ">0.25%",
+      "not op_mini all",
+      "ie 11"
+    ]
   }
 }
